# Python_WEB

HW_1/: README.md  book_classses.py  contact_classes.py  file_sorter.py  help.py  main.py  note_classes.py  print_table.py
HW_1/Task_1/: README.md  UML.drawio
HW_1/Task_2/: README.md  main.py
HW_1/contacts/: contact_classes.py  fields.py
HW_1/data/: address_book.pkl  notes.pkl
HW_1/output/: print_table.py
HW_10/: README.md
HW_10/project_poetry_0.3/: pyproject.toml
HW_11/: README.md
HW_11/contact_api/: pyproject.toml
HW_12/: README.md
HW_12/contact_api/: pyproject.toml
HW_13/Task_1/: README.md
HW_13/Task_1/contact_api/: pyproject.toml
HW_13/Task_1/contact_api/contact_api/: crud.py  main.py
HW_13/Task_1/contact_api/contact_api/conf/: config.py  config1.py
HW_13/Task_1/contact_api/contact_api/database/: database.py
HW_13/Task_1/contact_api/contact_api/migrations/versions/: 583b9510f421_init.py  620fac62172b_init.py  b0e92a913b3b_init5.py  b34857612b43_init.py
HW_13/Task_1/contact_api/contact_api/repository/: users.py
HW_13/Task_1/contact_api/contact_api/schemas/: schemas.py
HW_13/Task_1/contact_api/contact_api/services/: auth.py  email.py
HW_13/Task_1/contact_api/contact_api/services/templates/: email_template.html
HW_13/Task_2/: README.md
HW_14/: README.md  info3.docx  ~$info3.docx
HW_14/contact_api/: pyproject.toml
HW_14/contact_api_old/: pyproject.toml
HW_2/Task_1_poetry/: README.md  pyproject.toml
HW_2/Task_1_poetry/console_assistant/: main.py
HW_2/Task_1_poetry/console_assistant/contacts/: book_classes.py  fields.py  note_classes.py
HW_6/: README.md
HW_7/project_poetry3/: alembic.ini  pyproject.toml
HW_9/: result_1.3.csv
HW_9/Task_1/project_poetry/: pyproject.toml
HW_9/Task_1/project_poetry/project_poetry/: authors.json  config.ini  parser.py  process_csv_to_json.py  quotes.json
HW_9/Task_1/project_poetry/project_spyder/project_spyder/: middlewares.py
HW_9/Task_1/project_poetry/project_spyder/project_spyder/spiders/: authors.py
(+202 files in other folders)
