[tool.poetry]
name = "console-assistant"
version = "0.1.0"
description = ""
authors = ["Olena Poroskun <alenka200124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "13.7.0"
prompt-toolkit = "3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
