[tool.poetry]
name = "project-poetry3"
version = "0.1.0"
description = ""
authors = ["Olena Poroskun <alenka200124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^23.2.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
