[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["Olena Poroskun <alenka200124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
mongoengine = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
